<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.social.SocialLoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/google_social_login"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/facebook_social_login"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <Button
            android:id="@+id/facebook_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_facebook"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/halo_social_login"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <Button
            android:id="@+id/halo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_halo"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/halo_social_signin"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <Button
            android:id="@+id/halo_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_with_halo"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/halo_social_token"
            android:layout_marginTop="@dimen/default_margin_small"/>

        <Button
            android:id="@+id/halo_token_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/token_information"
            android:layout_marginTop="@dimen/default_margin_small"/>


    </LinearLayout>

</ScrollView>