<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:mContext=".ui.social.SocialHaloSignIn">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/halo_social_signin"
        android:layout_marginTop="@dimen/default_margin_small"/>

    <EditText
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/edit_signin_name" />

    <EditText
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_surname"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/edit_signin_surname" />

    <EditText
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/edit_signin_email" />

    <EditText
        android:layout_marginTop="@dimen/default_margin_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/edit_signin_password" />

    <Button
        android:id="@+id/halo_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_with_halo"
        android:layout_marginTop="@dimen/default_margin_small"/>



</LinearLayout>